# iptux

./: CMakeLists.txt  CMakeSettings.json
src/: CMakeLists.txt
src/iptux/: AnalogFS.cpp  CMakeLists.txt  Command.cpp  CoreThread.cpp  DataSettings.cpp  DialogPeer.cpp  MainWindow.cpp  Models.h  Platform-win32.cpp  Platform-win32.h  Platform.h  PlatformLinux.cpp  PlatformLinux.h  ProgramData.h  RecvFileData.cpp  SendFile.cpp  SendFileData.cpp  TcpData.cpp  UiCoreThread.cpp  UiHelper.cpp  support.cpp  utils.cpp  utils.h  wrapper.cpp
src/main/: iptux.cpp
